# 0xRIP

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  run_dev.py  slides.html  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
backend/: TODO.md  __init__.py  __main__.py  database.py  main.py  minimax_client.py  package.json  pyproject.toml  test_minimax.py  tsconfig.json
backend/agent/: __init__.py  config.py  engine.py  ghost.py  music.py
backend/memory/: __init__.py  database.py  store.py
backend/skills/boss/: INSTALL.md  requirements.txt
backend/skills/boss/agents/: openai.yaml
backend/skills/colleague/prompts/: correction_handler.md  persona_builder.md
backend/skills/colleague/tools/: skill_writer.py
backend/skills/crush/prompts/: correction_handler.md  intake.md  memory_analyzer.md  memory_builder.md  merger.md  persona_analyzer.md  persona_builder.md
backend/skills/crush/tools/: photo_analyzer.py  qq_parser.py  skill_writer.py  social_parser.py  (+2 more)
backend/skills/digital-life/: SKILL.md
backend/skills/ex/: INSTALL.md  requirements.txt
backend/skills/immortal/: SKILL.md
backend/skills/nopua/: SKILL.md
backend/skills/reunion/: SKILL.md  requirements.txt
backend/skills/senpai/: INSTALL.md
backend/src/: index.ts  types.ts
backend/src/agent/: context.ts  loop.ts
backend/src/db/: client.ts  schema.ts
backend/src/services/: grave.ts  memory.ts  mmx.ts  session.ts
backend/tests/: conftest.py  test_database.py  test_engine_integration.py  test_store.py
(+203 files in other folders)
