[project]
name = "0xrip-backend"
version = "0.1.5"
description = "0xRIP Digital Graveyard Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "requests>=2.32",
    "python-dotenv>=1.1",
    "pydantic>=2.10",
    "sqlalchemy>=2.0",
    "chromadb>=1.0",
]

[project.scripts]
serve = "backend.__main__:main"
